# NumericsSharp

./: .gitignore  LICENSE  README.md
docs/: numerics-sharp-requirements.md  review-2026-07-10.md  roadmap.md
src/: NumericsSharp.slnx
src/NumericsSharp.Benchmarks/: NumericsSharp.Benchmarks.csproj  Program.cs
src/NumericsSharp.Core.Tests/: NumericsSharp.Core.Tests.csproj
src/NumericsSharp.Core.Tests/LinearAlgebra/: DirichletBoundaryConditionTests.cs  LinearSystemResidualTests.cs  SparseMatrixAssemblerTests.cs  SparseMatrixBuilderTests.cs
src/NumericsSharp.Core/LinearAlgebra/: CsrMatrix.cs  CsrMatrixPattern.cs  DirichletBoundaryCondition.cs  ILinearOperator.cs  LinearSystemResidual.cs  MatrixKind.cs  SparseMatrixAssembler.cs  SparseMatrixBuilder.cs  Vector.cs
src/NumericsSharp.Core/Threading/: NumericsThreadingOptions.cs  ParallelMode.cs
src/NumericsSharp.Mkl/: MklBackendException.cs  NumericsSharp.Mkl.csproj
src/NumericsSharp.Mkl.Native/: CMakeLists.txt  CMakePresets.json
src/NumericsSharp.Mkl.Native/include/: NumericsSharpMklNative.h
src/NumericsSharp.Mkl.Native/src/: PardisoNative.cpp
src/NumericsSharp.Mkl.Tests/: NumericsSharp.Mkl.Tests.csproj
src/NumericsSharp.Mkl.Tests/Native/: MklNativeExceptionTests.cs  NativeAbiContractTests.cs  NativeLibraryTestResolver.cs  PardisoNativeHandleSmokeTests.cs  PardisoNativeMethodsSmokeTests.cs
src/NumericsSharp.Mkl.Tests/Pardiso/: PardisoCsrMatrixTests.cs  PardisoSolverTests.cs
src/NumericsSharp.Mkl/Interop/: InteropInfo.cs  MklNativeStatus.cs
src/NumericsSharp.Mkl/Native/: InteropInfo.cs  MklNativeConstants.cs  MklNativeException.cs  MklNativeStatus.cs  PardisoNativeApi.cs  PardisoNativeHandle.cs  PardisoNativeMethods.cs
src/NumericsSharp.Mkl/Pardiso/: PardisoCsrMatrix.cs  PardisoMatrixType.cs  PardisoNativeHandle.cs  PardisoOptions.cs  PardisoSolver.cs
src/NumericsSharp.Solvers/: NumericsSharp.Solvers.csproj
src/NumericsSharp.Solvers.Tests/: NumericsSharp.Solvers.Tests.csproj
src/NumericsSharp.Solvers.Tests/ConjugateGradient/: ConjugateGradientSolverTests.cs
src/NumericsSharp.Solvers.Tests/Preconditioning/: Ilu0PreconditionerTests.cs  IncompleteCholeskyPreconditionerTests.cs  JacobiPreconditionerTests.cs
src/NumericsSharp.Solvers/ConjugateGradient/: ConjugateGradientLinearSolver.cs  ConjugateGradientOptions.cs  ConjugateGradientSolver.cs  PreconditionedConjugateGradientSolver.cs  SolverResult.cs  SolverStatus.cs
tools/: benchmarks.ps1  build.ps1
(+8 files in other folders)
